[project]
name = "chatwithgit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi[standard]>=0.115.8",
    "langchain>=0.3.19",
    "langchain-openai>=0.3.6",
    "langgraph>=0.2.74",
    "python-dotenv>=1.0.1",
]

[dependency-groups]
dev = [
    "chainlit>=2.2.1",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
]
